--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
+    "react-native-stars": "^1.2.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.2.3"
   },
