--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -32,3 +32,8 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.parallel=true
 android.enableR8=false
 android.bundle.enableUncompressedNativeLibs=false
+
+MYAPP_RELEASE_STORE_FILE=my-upload-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=a123456789
+MYAPP_RELEASE_KEY_PASSWORD=a123456789
