--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-auto-height-image": "^3.2.4",
+    "react-native-autoheight-webview": "^1.5.8",
     "react-native-config": "^1.4.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
@@ -28,6 +29,7 @@
     "react-native-stars": "^1.2.2",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.4.4",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.2.3"
   },
