--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
+    "iamport-react-native": "^1.6.3",
     "mock-async-storage": "^2.2.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
