--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ANGAGU_Unity_App"]
-	path = ANGAGU_Unity_App
+[submodule "unity/ANGAGU_Unity_App"]
+	path = unity/ANGAGU_Unity_App
 	url = https://github.com/ANGAGU/ANGAGU_Unity_App
