--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^0.9.3",
     "@asmadsen/react-native-unity-view": "^0.0.7",
+    "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -22,6 +24,7 @@
     "react-native-auto-height-image": "^3.2.4",
     "react-native-autoheight-webview": "^1.5.8",
     "react-native-config": "^1.4.2",
+    "react-native-counter-input": "^0.1.9",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.2.0",
