--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-counter-input": "^0.1.9",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-snap-carousel": "^3.9.1",
